@@ -1,3 +1,8 @@
+2008-02-19 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.gputils/Makefile: possibiliy to build gputils from
+	  a release package or svn repository if FROM_SVN is defined
+
 2008-02-17 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.mingw32/Makefile: updated to gcc-4.2.3, w32api-3.11,
